--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,13 @@ spring.application.name=spw-04-balance-management
 
 spring.mvc.view.prefix=/views/
 spring.mvc.view.suffix=.jsp
+
+spring.datasource.url=jdbc:h2:file:./database/balance
+spring.datasource.username=balance
+spring.datasource.password=balance
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+spring.security.filter.dispatcher-types=request,async
